--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "tsc && react-scripts start",
     "build": "tsc && react-scripts build",
-    "eject": "react-scripts eject",
-    "format": "prettier --config .prettierrc --write 'src/**/*.{ts,tsx}'"
+    "format": "prettier --config .prettierrc --write 'src/**/*.{ts,tsx}'",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
