--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "tsc && react-scripts start",
     "build": "tsc && react-scripts build",
+    "eject": "react-scripts eject",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
