--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.5",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.56.1"
   },
   "scripts": {
     "start": "tsc && react-scripts start",
