--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "antd": "^5.1.6",
     "axios": "^1.2.3",
+    "effector": "^22.5.0",
+    "effector-react": "^22.4.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
